apps/killedby/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: killedby
  namespace: killedby
spec:
  replicas: 1
  selector:
    matchLabels:
      app: killedby
  template:
    metadata:
      labels:
        app: killedby
    spec:
      containers:
        - name: killedby
          image: bacherik/killedby:v1.3.1
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
