apps/killedby/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: killedby
  namespace: killedby
spec:
  selector:
    app: killedby
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
